--- a/richlinkpreview/src/main/res/layout/link_layout.xml
+++ b/richlinkpreview/src/main/res/layout/link_layout.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rich_link_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:padding="5dp"
+    android:layout_margin="5dp"
+    android:animateLayoutChanges="true"
     android:background="@drawable/bg_card"
-    android:id="@+id/rich_link_card"
-    android:layout_margin="5dp">
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <ImageView
-        android:scaleType="centerCrop"
         android:id="@+id/rich_link_image"
         android:layout_width="110dp"
-        android:layout_height="90dp" />
+        android:layout_height="90dp"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
-        android:padding="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:animateLayoutChanges="true"
+        android:orientation="vertical"
+        android:padding="2dp">
 
         <TextView
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end"
             android:id="@+id/rich_link_title"
-            android:textColor="@color/grey_900"
-            android:padding="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Data"/>
-
-        <TextView
-            android:maxLines="2"
             android:ellipsize="end"
-            android:id="@+id/rich_link_desp"
-            android:textColor="@color/blue_grey_300"
-            android:padding="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Data"/>
-
-        <TextView
             android:maxLines="1"
-            android:ellipsize="end"
-            android:id="@+id/rich_link_url"
-            android:textColor="@color/blue_grey_700"
             android:padding="2dp"
+            android:textColor="@color/grey_900"
+            android:textStyle="bold"
+            tools:text="Data" />
+
+        <TextView
+            android:id="@+id/rich_link_desp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Data"/>
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:padding="2dp"
+            android:textColor="@color/blue_grey_300"
+            tools:text="Data" />
+
+        <TextView
+            android:id="@+id/rich_link_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="2dp"
+            android:textColor="@color/blue_grey_700"
+            tools:text="Data" />
 
     </LinearLayout>
 </LinearLayout>
